footer gap correction

--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ footer {
     margin: auto;
     margin-top: 25px;
     padding: 20px;
-    gap: 18%;
+    gap: 16%;
     border-radius: 25px 25px 0 0;
 }
 
